--- a/index.html
+++ b/index.html
@@ -8,6 +8,170 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <img src="img/logo.svg" alt="Логотип магазина">
+        <img src="img/Search.svg" alt="Иконка поиск">
+        <ul>
+            <li>
+                <button>
+                    <img src="img/stripes.svg" alt="burger">
+                </button>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="img/human-icon.svg" alt="иконка человека">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="img/basket.svg" alt="Корзина">
+                </a>
+            </li>
+        </ul>
+        <nav>
+            <h2>MENU</h2>
+            <ul>
+                <li>
+                    <h3>MAN</h3>
+                    <ul>
+                        <li>Accessories</li>
+                        <li>Bags</li>
+                        <li>Denim</li>
+                        <li>T-Shirts</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3>WOMAN</h3>
+                    <ul>
+                        <li>Accessories</li>
+                        <li>Jackets & Coats</li>
+                        <li>Polos</li>
+                        <li>T-Shirts</li>
+                        <li>Shirts</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3>KIDS</h3>
+                    <ul>
+                        <li>Accessories</li>
+                        <li>Jackets & Coats</li>
+                        <li>Polos</li>
+                        <li>T-Shirts</li>
+                        <li>Shirts</li>
+                        <li>Bags</li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <img src="img/Man.png" alt="Мужчина">
+            <h1>THE BRAND OF LUXERIOUS FASHION</h1>
+        </section>
+        <section>
+            <h2>sales</h2>
+            <ul>
+                <li>
+                    <p>30% OFF</p>
+                    <h3>FOR WOMEN</h3>
+                </li>
+                <li>
+                    <p>HOT DEAL</p>
+                    <h3>FOR MEN</h3>
+                </li>
+                <li>
+                    <p>NEW ARRIVALS</p>
+                    <h3>FOR KIDS</h3>
+                </li>
+                <li>
+                    <p>LUXIROUS & TRENDY</p>
+                    <h3>ACCESORIES</h3>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Fetured Items</h2>
+            <p>Shop for items based on what we featured in this week</p>
+            <ul>
+                <li>
+                    <img src="img/items-man.png" alt="products">
+                    <h3>ELLERY X M'O CAPSULE</h3>
+                    <p>Known for her sculptural takes on traditional tailoring, 
+                        Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p>$52.00</p>
+                </li>
+                <li>
+                    <img src="img/items-women.png" alt="products">
+                    <h3>ELLERY X M'O CAPSULE</h3>
+                    <p>Known for her sculptural takes on traditional tailoring, 
+                        Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p>$52.00</p>
+                </li>
+                <li>
+                    <img src="img/items-boys.png" alt="products">
+                    <h3>ELLERY X M'O CAPSULE</h3>
+                    <p>Known for her sculptural takes on traditional tailoring, 
+                        Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p>$52.00</p>
+                </li>
+                <li>
+                    <img src="img/items-man2.png" alt="products">
+                    <h3>ELLERY X M'O CAPSULE</h3>
+                    <p>Known for her sculptural takes on traditional tailoring, 
+                        Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p>$52.00</p>
+                </li>
+                <li>
+                    <img src="img/items-women2.png" alt="products">
+                    <h3>ELLERY X M'O CAPSULE</h3>
+                    <p>Known for her sculptural takes on traditional tailoring, 
+                        Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p>$52.00</p>
+                </li>
+                <li>
+                    <img src="img/items-women3.png" alt="products">
+                    <h3>ELLERY X M'O CAPSULE</h3>
+                    <p>Known for her sculptural takes on traditional tailoring, 
+                        Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p>$52.00</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>advantages</h2>
+            <ul>
+                <li>
+                    <img src="img/car.svg">
+                    <h3>Free Delivery</h3>
+                    <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+                </li>
+                <li>
+                    <img src="img/discount.svg">
+                    <h3>Sales & discounts</h3>
+                    <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+                </li>
+                <li>
+                    <img src="img/Crown.svg">
+                    <h3>Quality assurance</h3>
+                    <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <img src="img/icon-women-footer.png">
+            <p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
+            <p>SUBSCRIBE FOR OUR NEWLETTER AND PROMOTION</p>
+        </section>
+    </main>
+    <footer>
+        <section>
+            <p>© 2021  Brand  All Rights Reserved.</p>
+            <img src="img/facebook.png" alt="фейсбук">
+            <img src="img/instagram.png" alt="инста">
+            <img src="img/pinterest.png" alt="пинтерест">
+            <img src="img/twitter.png" alt="твит">
+        </section>
+    </footer>
 </body>
 </html>
