исправление 1 урока (регистр и ссылки)

--- a/index.html
+++ b/index.html
@@ -29,36 +29,36 @@
             </li>
         </ul>
         <nav>
-            <h2>MENU</h2>
+            <h2>menu</h2>
             <ul>
                 <li>
-                    <h3>MAN</h3>
+                    <h3>man</h3>
                     <ul>
-                        <li>Accessories</li>
-                        <li>Bags</li>
-                        <li>Denim</li>
-                        <li>T-Shirts</li>
+                        <li>accessories</li>
+                        <li>bags</li>
+                        <li>denim</li>
+                        <li>t-shirts</li>
                     </ul>
                 </li>
                 <li>
-                    <h3>WOMAN</h3>
+                    <h3>woman</h3>
                     <ul>
-                        <li>Accessories</li>
-                        <li>Jackets & Coats</li>
-                        <li>Polos</li>
-                        <li>T-Shirts</li>
-                        <li>Shirts</li>
+                        <li>accessories</li>
+                        <li>jackets & coats</li>
+                        <li>polos</li>
+                        <li>t-shirts</li>
+                        <li>shirts</li>
                     </ul>
                 </li>
                 <li>
-                    <h3>KIDS</h3>
+                    <h3>kids</h3>
                     <ul>
-                        <li>Accessories</li>
-                        <li>Jackets & Coats</li>
-                        <li>Polos</li>
-                        <li>T-Shirts</li>
-                        <li>Shirts</li>
-                        <li>Bags</li>
+                        <li>accessories</li>
+                        <li>jackets & coats</li>
+                        <li>polos</li>
+                        <li>t-shirts</li>
+                        <li>shirts</li>
+                        <li>bags</li>
                     </ul>
                 </li>
             </ul>
@@ -67,73 +67,73 @@
     <main>
         <section>
             <img src="img/Man.png" alt="Мужчина">
-            <h1>THE BRAND OF LUXERIOUS FASHION</h1>
+            <h1>the brand of luxerious fashion</h1>
         </section>
         <section>
             <h2>sales</h2>
             <ul>
                 <li>
-                    <p>30% OFF</p>
-                    <h3>FOR WOMEN</h3>
+                    <p>30% off</p>
+                    <h3>for women</h3>
                 </li>
                 <li>
-                    <p>HOT DEAL</p>
-                    <h3>FOR MEN</h3>
+                    <p>hot deal</p>
+                    <h3>for men</h3>
                 </li>
                 <li>
-                    <p>NEW ARRIVALS</p>
-                    <h3>FOR KIDS</h3>
+                    <p>new arrivals</p>
+                    <h3>for kids</h3>
                 </li>
                 <li>
-                    <p>LUXIROUS & TRENDY</p>
-                    <h3>ACCESORIES</h3>
+                    <p>luxirous & trendy</p>
+                    <h3>accesories</h3>
                 </li>
             </ul>
         </section>
         <section>
-            <h2>Fetured Items</h2>
-            <p>Shop for items based on what we featured in this week</p>
+            <h2>fetured items</h2>
+            <p>shop for items based on what we featured in this week</p>
             <ul>
                 <li>
                     <img src="img/items-man.png" alt="products">
-                    <h3>ELLERY X M'O CAPSULE</h3>
-                    <p>Known for her sculptural takes on traditional tailoring, 
-                        Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <h3>ellery x m'o capsule</h3>
+                    <p>known for her sculptural takes on traditional tailoring, 
+                        australian arbiter of cool kym ellery teams up with moda operandi.</p>
                     <p>$52.00</p>
                 </li>
                 <li>
                     <img src="img/items-women.png" alt="products">
-                    <h3>ELLERY X M'O CAPSULE</h3>
-                    <p>Known for her sculptural takes on traditional tailoring, 
-                        Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <h3>ellery x m'o capsule</h3>
+                    <p>known for her sculptural takes on traditional tailoring, 
+                        australian arbiter of cool kym ellery teams up with moda operandi.</p>
                     <p>$52.00</p>
                 </li>
                 <li>
                     <img src="img/items-boys.png" alt="products">
-                    <h3>ELLERY X M'O CAPSULE</h3>
-                    <p>Known for her sculptural takes on traditional tailoring, 
-                        Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <h3>ellery x m'o capsule</h3>
+                    <p>known for her sculptural takes on traditional tailoring, 
+                        australian arbiter of cool kym ellery teams up with moda operandi.</p>
                     <p>$52.00</p>
                 </li>
                 <li>
                     <img src="img/items-man2.png" alt="products">
-                    <h3>ELLERY X M'O CAPSULE</h3>
-                    <p>Known for her sculptural takes on traditional tailoring, 
-                        Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <h3>ellery x m'o capsule</h3>
+                    <p>known for her sculptural takes on traditional tailoring, 
+                        australian arbiter of cool kym ellery teams up with moda operandi.</p>
                     <p>$52.00</p>
                 </li>
                 <li>
                     <img src="img/items-women2.png" alt="products">
-                    <h3>ELLERY X M'O CAPSULE</h3>
-                    <p>Known for her sculptural takes on traditional tailoring, 
-                        Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <h3>ellery x m'o capsule</h3>
+                    <p>known for her sculptural takes on traditional tailoring, 
+                        australian arbiter of cool kym ellery teams up with moda operandi.</p>
                     <p>$52.00</p>
                 </li>
                 <li>
                     <img src="img/items-women3.png" alt="products">
-                    <h3>ELLERY X M'O CAPSULE</h3>
-                    <p>Known for her sculptural takes on traditional tailoring, 
-                        Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <h3>ellery x m'o capsule</h3>
+                    <p>known for her sculptural takes on traditional tailoring, 
+                        australian arbiter of cool kym ellery teams up with moda operandi.</p>
                     <p>$52.00</p>
                 </li>
             </ul>
@@ -143,34 +143,34 @@
             <ul>
                 <li>
                     <img src="img/car.svg">
-                    <h3>Free Delivery</h3>
-                    <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+                    <h3>free delivery</h3>
+                    <p>worldwide delivery on all. authorit tively morph next-generation innov tion with extensive models.</p>
                 </li>
                 <li>
                     <img src="img/discount.svg">
-                    <h3>Sales & discounts</h3>
-                    <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+                    <h3>sales & discounts</h3>
+                    <p>worldwide delivery on all. authorit tively morph next-generation innov tion with extensive models.</p>
                 </li>
                 <li>
-                    <img src="img/Crown.svg">
-                    <h3>Quality assurance</h3>
-                    <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+                    <img src="img/crown.svg">
+                    <h3>quality assurance</h3>
+                    <p>worldwide delivery on all. authorit tively morph next-generation innov tion with extensive models.</p>
                 </li>
             </ul>
         </section>
         <section>
             <img src="img/icon-women-footer.png">
-            <p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
-            <p>SUBSCRIBE FOR OUR NEWLETTER AND PROMOTION</p>
+            <p>“vestibulum quis porttitor dui! quisque viverra nunc mi, a pulvinar purus condimentum“</p>
+            <p>subscribe for our newletter and promotion</p>
         </section>
     </main>
     <footer>
         <section>
-            <p>© 2021  Brand  All Rights Reserved.</p>
-            <img src="img/facebook.png" alt="фейсбук">
-            <img src="img/instagram.png" alt="инста">
-            <img src="img/pinterest.png" alt="пинтерест">
-            <img src="img/twitter.png" alt="твит">
+            <p>© 2021  brand  all rights reserved.</p>
+            <a href="https://ru-ru.facebook.com/"><img src="img/facebook.png" alt="фейсбук"></a>
+            <a href="https://www.instagram.com/"><img src="img/instagram.png" alt="инста"></a>
+            <a href="https://www.pinterest.ru/"><img src="img/pinterest.png" alt="пинтерест"></a>
+            <a href="https://twitter.com/?lang=ru"><img src="img/twitter.png" alt="твит"></a>
         </section>
     </footer>
 </body>
