--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <section class="footer">
                 <div class="container footer-info">
                     <div class="footer__license">
-                        <p class="footer__license__text">© 2021  brand  all rights reserved.</p>
+                        <p class="footer__license-text">© 2021  brand  all rights reserved.</p>
                     </div>
                     <div class="footer__social">
                         <a class="footer__social__link" href="https://ru-ru.facebook.com/"><img class="footer__social__img" src="img/facebook.png" alt="фейсбук"></a>
