урок 4 (обещаю доделать остальное)

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     </li>
                 </ul>
                 <div class="products__buttom-but">
-                    <buttom class="products__buttom">browse all product</buttom>
+                    <button type="button" class="products__buttom">browse all product</button>
                 </div>
             </div>
         </section>
@@ -186,7 +186,12 @@
                         <p class="comment__text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span class="comment__text-women">a pulvinar purus condimentum</span>“</p>
                     </div>
                     <div class="subscribe">
-                        <p class="comment__text__sub"><span class="subscribe-sub">subscribe</span><br> for our newletter and promotion</p>
+                        <p class="comment__text__sub"><span class="subscribe-sub">subscribe</span><br>
+                        for our newletter and promotion</p>
+                        <form class="subscribe subscribe-form">
+                            <input class="subscribe__email" type="email" placeholder="Enter Your Email"> 
+                            <button class="subscribe-button" type="submit">Subscribe</button>
+                        </form>
                     </div>
                 </div>
         </section>
